[gd_scene load_steps=17 format=3 uid="uid://3trgkf0u68ry"]

[ext_resource type="Shader" path="res://example/card/card.gdshader" id="1_0tef8"]
[ext_resource type="Shader" path="res://example/card/destroy.gdshader" id="1_f0hiy"]
[ext_resource type="Script" path="res://example/card/card.gd" id="1_gelhr"]
[ext_resource type="Script" path="res://example/card/state_machine/card_state_machine.gd" id="2_vqdgh"]
[ext_resource type="Texture2D" uid="uid://d1htpyera6gqa" path="res://XPvTc.png" id="3_4go66"]
[ext_resource type="Script" path="res://example/card/state_machine/states/idle_card_state.gd" id="3_bx54l"]
[ext_resource type="Texture2D" uid="uid://0ewtuu0hueii" path="res://icon.svg" id="3_obxak"]
[ext_resource type="Script" path="res://example/card/state_machine/states/clicked_card_state.gd" id="4_2bop5"]
[ext_resource type="Script" path="res://example/card/state_machine/states/drag_card_state.gd" id="5_f7w2d"]
[ext_resource type="Script" path="res://example/card/state_machine/states/release_card_state.gd" id="6_r0y7t"]
[ext_resource type="Script" path="res://example/card/state_machine/states/hover_card_state.gd" id="7_xjssr"]
[ext_resource type="AudioStream" uid="uid://c5kaogo8u3i6u" path="res://card sound drawfinal.wav" id="12_htq76"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x353h"]
resource_local_to_scene = true
shader = ExtResource("1_0tef8")
shader_parameter/rect_size = Vector2(100, 150)
shader_parameter/fov = 90.0
shader_parameter/cull_back = false
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ruxe"]
resource_local_to_scene = true
shader = ExtResource("1_f0hiy")
shader_parameter/dissolve_value = 0.071
shader_parameter/burn_size = 0.07
shader_parameter/burn_color = Color(1, 0.552941, 0, 1)
shader_parameter/dissolve_texture = ExtResource("3_4go66")

[sub_resource type="ViewportTexture" id="ViewportTexture_6t2yu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwet6"]
size = Vector2(100, 150)

[node name="Card" type="Control"]
material = SubResource("ShaderMaterial_x353h")
use_parent_material = true
custom_minimum_size = Vector2(100, 150)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_gelhr")

[node name="ColorRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_0ruxe")
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_obxak")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
visible = false
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 0.341176)
show_behind_parent = true
layout_mode = 0
offset_left = 9.0
offset_top = 9.0
offset_right = 112.0
offset_bottom = 160.0
texture = SubResource("ViewportTexture_6t2yu")
expand_mode = 1

[node name="positive_effect_label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 7.535
offset_top = 46.705
offset_right = 93.535
offset_bottom = 69.705
text = "positive eff"

[node name="negative_effect_label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 5.46
offset_top = 84.14
offset_right = 96.46
offset_bottom = 107.14
text = "negative eff"

[node name="turn_label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 13.0
offset_top = 24.0
offset_right = 92.0
offset_bottom = 47.0
text = "3 turns
"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "State"

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_vqdgh")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("card")]
script = ExtResource("3_bx54l")
card = NodePath("../..")

[node name="Click" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("card")]
script = ExtResource("4_2bop5")
card = NodePath("../..")

[node name="Drag" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("card")]
script = ExtResource("5_f7w2d")
card = NodePath("../..")

[node name="Release" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("card")]
script = ExtResource("6_r0y7t")
card = NodePath("../..")

[node name="Hover" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("card")]
script = ExtResource("7_xjssr")
card = NodePath("../..")

[node name="DropPointDetector" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(50, 75)
shape = SubResource("RectangleShape2D_gwet6")

[node name="destroy" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="destroy"]
position = Vector2(50, 75)
shape = SubResource("RectangleShape2D_gwet6")

[node name="CardsDetector" type="Area2D" parent="."]
texture_filter = 3
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardsDetector"]
position = Vector2(50, 75)
shape = SubResource("RectangleShape2D_gwet6")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_htq76")

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 18.0
offset_right = 65.0
offset_bottom = 23.0
text = "Name"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
